# EventManagementSystem

./: README.md  pyproject.toml
backend/: db.sqlite3
backend/eventmanagementsystem/: asgi.py  settings.py  urls.py  wsgi.py
backend/main/: admin.py  models.py  serializers.py  urls.py  views.py
backend/main/migrations/: 0001_initial.py  0002_event_name.py  0003_seat_booking.py  0004_event_image.py  0005_seat_booked.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/Components/Bookings/: Bookings.css  Bookings.jsx
frontend/src/Components/Collection/: Collection.css  Collection.jsx
frontend/src/Components/Event/: Event.css  Event.jsx
frontend/src/Components/EventDisplay/: EventDisplay.css  EventDisplay.jsx
frontend/src/Components/Navbar/: Navbar.css  Navbar.jsx
frontend/src/Context/: AuthProvider.js
frontend/src/Pages/: EventDetail.jsx  Login.jsx  Main.jsx  MyBookings.jsx  SeatPicker.jsx  Signup.jsx
frontend/src/Pages/CSS/: Login.css  Main.css  MyBookings.css  SeatPicker.css  Signup.css
